--- a/.github/workflows/deploy-terraform.yml
+++ b/.github/workflows/deploy-terraform.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Terraform Plan
         working-directory: terraform/
-        run: terraform plan -var-file="terraform.tfvars"
+        run: terraform plan
 
       - name: Await Manual Approval for Apply
         uses: trstringer/manual-approval@v1
@@ -50,7 +50,7 @@ jobs:
       - name: Terraform Apply
         if: ${{ success() }}  
         working-directory: terraform/
-        run: terraform apply -var-file="terraform.tfvars" -auto-approve
+        run: terraform apply -auto-approve
 
   destroy:
     name: Destroy Terraform Resources
@@ -90,4 +90,4 @@ jobs:
       - name: Terraform Destroy
         if: ${{ success() }}  
         working-directory: terraform/
-        run: terraform destroy -var-file="terraform.tfvars" -auto-approve
+        run: terraform destroy -auto-approve
