--- a/helm/helmfile.yaml
+++ b/helm/helmfile.yaml
@@ -11,7 +11,12 @@ releases:
     namespace: ingress-nginx
     chart: ingress-nginx/ingress-nginx
     values:
-      - replicaCount: 2
+      - controller:
+          replicaCount: 2
+          service:
+            type: LoadBalancer
+          defaultBackend:
+            enabled: true
 
   - name: prometheus
     namespace: monitoring
