--- a/kubernetes/ingres_nginx.yaml
+++ b/kubernetes/ingres_nginx.yaml
@@ -7,8 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: nginx.yourdomain.com  # Cambia esto a tu dominio
-      http:
+    - http:
         paths:
           - path: /
             pathType: Prefix
