--- a/kubernetes/service_nginx.yaml
+++ b/kubernetes/service_nginx.yaml
@@ -2,13 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
-  labels:
-    app: nginx
+  namespace: default
 spec:
+  type: ClusterIP
+  ports:
+    - port: 80
+      targetPort: 80
   selector:
     app: nginx
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-  type: ClusterIP
