Agregando deploy services

--- a/helm/helmfile.yaml
+++ b/helm/helmfile.yaml
@@ -32,3 +32,12 @@ releases:
     values:
       - service:
           type: LoadBalancer
+      - datasources:
+          datasources.yaml:
+            apiVersion: 1
+            datasources:
+              - name: Prometheus
+                type: prometheus
+                url: http://prometheus-server.monitoring.svc.cluster.local:9090
+                access: proxy
+                isDefault: true
