Agregando deploy services

--- a/helm/helmfile.yaml
+++ b/helm/helmfile.yaml
@@ -25,16 +25,11 @@ releases:
       - server:
           service:
             type: LoadBalancer
-            port: 9090                
-            targetPort: 9090          
-            annotations:
-              service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
-          persistence:
-            enabled: true            # Habilitar persistencia
-            storageClass: manual     # Asegúrate de que esta clase de almacenamiento exista
-            accessModes:
-              - ReadWriteOnce
-            size: 10Gi               # Tamaño del volumen persistente
+          persistentVolume:
+            storageClass: "gp2"  # Aquí estableces la clase de almacenamiento
+      - alertmanager:
+          persistentVolume:
+            storageClass: "gp2"  # Aquí estableces la clase de almacenamiento para Alertmanager
 
   - name: grafana
     namespace: monitoring
