--- a/.github/workflows/deploy-terraform.yml
+++ b/.github/workflows/deploy-terraform.yml
@@ -87,6 +87,10 @@ jobs:
           exclude-workflow-initiator-as-approver: false
 
 
+      - name: Terraform Init
+        working-directory: terraform/
+        run: terraform init
+
       - name: Terraform Destroy
         if: ${{ success() }}  
         working-directory: terraform/
