--- a/helm/helmfile.yaml
+++ b/helm/helmfile.yaml
@@ -1,6 +1,6 @@
 repositories:
   - name: nginx-stable
-    url: https://charts.nginx.com/stable
+    url: https://kubernetes.github.io/ingress-nginx
   - name: grafana
     url: https://grafana.github.io/helm-charts
   - name: prometheus-community
@@ -9,7 +9,7 @@ repositories:
 releases:
   - name: nginx
     namespace: default
-    chart: nginx-stable/nginx-ingress
+    chart: ingress-nginx/ingress-nginx
     values:
       - nginx-values.yaml
 
