--- a/helm/helmfile.yaml
+++ b/helm/helmfile.yaml
@@ -1,5 +1,5 @@
 repositories:
-  - name: nginx-stable
+  - name: ingress-nginx
     url: https://kubernetes.github.io/ingress-nginx
   - name: grafana
     url: https://grafana.github.io/helm-charts
@@ -13,14 +13,14 @@ releases:
     values:
       - nginx-values.yaml
 
-  - name: prometheus
-    namespace: monitoring
-    chart: prometheus-community/prometheus
-    values:
-      - prometheus-values.yaml
-
   - name: grafana
     namespace: monitoring
     chart: grafana/grafana
     values:
       - grafana-values.yaml
+
+  - name: prometheus
+    namespace: monitoring
+    chart: prometheus-community/prometheus
+    values:
+      - prometheus-values.yaml
