--- a/helm/helmfile.yaml
+++ b/helm/helmfile.yaml
@@ -24,4 +24,4 @@ releases:
     chart: prometheus-community/prometheus
     values:
       - prometheus-values.yaml
-      - promtheus-storage.yaml
+      - prometheus-storage.yaml
