--- a/.github/workflows/deploy-helm.yml
+++ b/.github/workflows/deploy-helm.yml
@@ -1,9 +1,10 @@
 name: Deploy Helmfile to EKS
 
 on:
-  push:
-    branches:
-      - master
+  workflow_run:
+    workflows: ["Deploy Terraform to AWS"]
+    types:
+      - completed
 
 jobs:
   deploy:
