Add ebs volumes

--- a/.github/workflows/deploy-kubctl.yml
+++ b/.github/workflows/deploy-kubctl.yml
@@ -21,6 +21,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
           aws-region: us-east-1
 
+      - name: Install eksctl
+        run: |
+          curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+          sudo mv /tmp/eksctl /usr/local/bin
+
       - name: Install AWS EBS CSI Driver addon
         run: |
           eksctl create addon --name aws-ebs-csi-driver --cluster eks-mundos-e --region us-east-1
