--- a/.github/workflows/deploy-kubctl.yml
+++ b/.github/workflows/deploy-kubctl.yml
@@ -26,9 +26,12 @@ jobs:
           curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
           sudo mv /tmp/eksctl /usr/local/bin
 
+
+      
       - name: Install AWS EBS CSI Driver addon
         run: |
-          eksctl create addon --name aws-ebs-csi-driver --cluster eks-mundos-e --region us-east-1
+          eksctl crate iamserviceaccount --name ebs-csi-controller-sa --namespace kube-system --cluster eks-mundos-e --attach-policy-arn arn:aws:iam:aws:policy/service-role/AmazonEBSCSIDriverPolicy --approve --role-only --role-name AmazonEKS_EBS_CSI_DriverRole
+          eksctl create addon --name aws-ebs-csi-driver --cluster eks-mundos-e --region us-east-1 --service-account-role-arn arn:aws:iam:aws:policy/service-role/AmazonEBSCSIDriverPolicy --force
 
       - name: Update kubeconfig
         run: |
@@ -36,6 +39,7 @@ jobs:
 
       - name: Deploy YAML files to EKS
         run: |
+          kubectl create namespace nginx
           kubectl apply -f kubernetes/deployment_nginx.yaml
           kubectl apply -f kubernetes/ingres_nginx.yaml
           kubectl apply -f kubernetes/service_nginx.yaml
