--- a/kubernetes/service_nginx.yaml
+++ b/kubernetes/service_nginx.yaml
@@ -2,9 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
-  namespace: default
+  namespace: nginx
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
     - port: 80
       targetPort: 80
