--- a/.github/workflows/deploy-helm.yml
+++ b/.github/workflows/deploy-helm.yml
@@ -28,9 +28,21 @@ jobs:
           chmod +x ./kubectl
           sudo mv ./kubectl /usr/local/bin/kubectl
 
+      - name: Install eksctl
+        run: |
+          curl --silent --location "https://github.com/weaveworks/eksctl/releases/latest/download/eksctl_$(uname -s)_amd64.tar.gz" | tar xz -C /tmp
+          sudo mv /tmp/eksctl /usr/local/bin
+
       - name: Setup kubeconfig
         run: |
           aws eks update-kubeconfig --region us-east-1 --name eks-mundos-e
+
+      - name: Install AWS EBS CSI Driver addon
+        run: |
+          eksctl utils associate-iam-oidc-provider --region=us-east-1 --cluster=eks-mundos-e --approve
+          eksctl create iamserviceaccount --name ebs-csi-controller-sa --namespace kube-system --cluster eks-mundos-e --attach-policy-arn arn:aws:iam:aws:policy/service-role/AmazonEBSCSIDriverPolicy --approve --role-only --role-name AmazonEKS_EBS_CSI_DriverRole
+          eksctl create addon --name aws-ebs-csi-driver --cluster eks-mundos-e --region us-east-1 --service-account-role-arn arn:aws:iam:aws:policy/service-role/AmazonEBSCSIDriverPolicy --force
+
 
       - name: Install Helm
         run: |
