--- a/helm/grafana-values.yaml
+++ b/helm/grafana-values.yaml
@@ -1,62 +1,9 @@
-# grafana-values.yaml
-
-service:
-  enabled: true
-  type: LoadBalancer
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
-
 persistence:
   enabled: true
-  size: 5Gi
-  storageClass: gp2
+  storageClassName: gp2
+  size: 10Gi
 
-admin:
-  existingSecret: grafana-admin-secret
+adminPassword: 'EKS!sAWSome'
 
-dashboardProviders:
-  dashboardproviders.yaml:
-    apiVersion: 1
-    providers:
-      - name: 'default'
-        orgId: 1
-        folder: ''
-        type: file
-        disableDeletion: false
-        updateIntervalSeconds: 10
-        options:
-          path: /var/lib/grafana/dashboards/default
-
-datasources:
-  datasources.yaml:
-    apiVersion: 1
-    datasources:
-      - name: Prometheus
-        type: prometheus
-        url: http://prometheus-server.monitoring.svc.cluster.local:80
-        access: proxy
-        isDefault: true
-
-resources:
-  requests:
-    cpu: 100m
-    memory: 256Mi
-  limits:
-    cpu: 200m
-    memory: 512Mi
-
-rbac:
-  create: true
-
-podAnnotations:
-  iam.amazonaws.com/role: arn:aws:iam::YOUR_ACCOUNT_ID:role/YOUR_IAM_ROLE
-
-livenessProbe:
-  enabled: true
-  initialDelaySeconds: 30
-  periodSeconds: 60
-
-readinessProbe:
-  enabled: true
-  initialDelaySeconds: 30
-  periodSeconds: 60
+service:
+  type: LoadBalancer
