--- a/.github/workflows/deploy-kubctl.yml
+++ b/.github/workflows/deploy-kubctl.yml
@@ -32,9 +32,11 @@ jobs:
 
       - name: Install AWS EBS CSI Driver addon
         run: |
+          aws iam attach-role-policy --role-name AmazonEBSCSIDriverRole --policy-arn arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy
           eksctl utils associate-iam-oidc-provider --region=us-east-1 --cluster=eks-mundos-e --approve
-          eksctl create iamserviceaccount --name ebs-csi-controller-sa --namespace kube-system --cluster eks-mundos-e --attach-policy-arn arn:aws:iam::482544519549:role/AmazonEBSCSIDriverRole --approve --role-only --role-name AmazonEKS_EBS_CSI_DriverRole
+          eksctl create iamserviceaccount --name ebs-csi-controller-sa --namespace kube-system --cluster eks-mundos-e --attach-policy-arn arn:aws:iam::aws:policy/service-role/AmazonEBSCSIDriverPolicy --approve --role-only --role-name AmazonEBSCSIDriverRole
           eksctl create addon --name aws-ebs-csi-driver --cluster eks-mundos-e --region us-east-1 --service-account-role-arn arn:aws:iam::482544519549:role/AmazonEBSCSIDriverRole --force
+
 
 
       - name: Deploy YAML files to EKS
